@@ -71,6 +71,8 @@ compileJava {
 
 }
 
+// -Djdk.tracePinnedThreads=full
+
 application {
   applicationDefaultJvmArgs = [
       "-server",
@@ -87,7 +89,7 @@ application {
 }
 
 processAot {
-  jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+//  jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 //  debug = true
 }
 
@@ -121,73 +123,3 @@ distributions {
     }
   }
 }
-
-//graalvmNative {
-//  binaries {
-//    main {
-//      imageName = 'application'
-//      mainClass = 'org.test.Main'
-//      debug = true
-//      verbose = true
-//      fallback = true
-//      sharedLibrary = false
-//      quickBuild = false
-//      richOutput = false
-//
-//      systemProperties = [name1: 'value1', name2: 'value2']
-//      configurationFileDirectories.from(file('src/my-config'))
-//      excludeConfig.put("org.example.test:artifact:version", ["^/META-INF/native-image/.*", "^/config/.*"])
-//      excludeConfig.put(file("path/to/artifact.jar"), List.of("^/META-INF/native-image/.*", "^/config/.*"))
-//
-//      // Advanced options
-//      buildArgs.add('--link-at-build-time')
-//      jvmArgs.add('flag')
-//
-//      // Runtime options
-//      runtimeArgs.add('--help')
-//
-//      useFatJar = true
-//    }
-//  }
-//
-//  agent {
-//    defaultMode = "standard"
-//    enabled = true
-//
-//    modes {
-//      standard {
-//      }
-//      conditional {
-//        userCodeFilterPath = "path-to-filter.json"
-//        extraFilterPath = "path-to-another-filter.json" // Optional
-//      }
-//      direct {
-//        options.add("config-output-dir={output_dir}")
-//        options.add("experimental-configuration-with-origins")
-//      }
-//    }
-//
-//    callerFilterFiles.from("filter.json")
-//    accessFilterFiles.from("filter.json")
-//    builtinCallerFilter = true
-//    builtinHeuristicFilter = true
-//    enableExperimentalPredefinedClasses = false
-//    enableExperimentalUnsafeAllocationTracing = false
-//    trackReflectionMetadata = true
-//
-//    metadataCopy {
-//      inputTaskNames.add("test")
-//      outputDirectories.add("META-INF/native-image/<groupId>/<artifactId>/")
-//      mergeWithExisting = true
-//    }
-//
-//    tasksToInstrumentPredicate = new Predicate<Task>() {
-//
-//      @Override
-//      boolean test(Task task) {
-//        return true
-//      }
-//    }
-//
-//  }
-//}
